# hdx-scraper-refugees-returnees

./: README.md  hatch.toml  pyproject.toml  requirements-test.txt  requirements.txt  ruff.toml  run.py
.config/: ruff.toml
.github/workflows/: publish.yaml  run-python-script.yaml
src/hdx/scraper/refugees_returnees/: __main__.py  pipeline.py  refugees_returnees.py
src/hdx/scraper/refugees_returnees/config/: hdx_dataset_static.yaml  project_configuration.yaml
tests/: conftest.py  test_pipeline.py  test_refugees_returnees.py
tests/fixtures/: hdx_hapi_returnees_global.csv
tests/fixtures/input/: dataset-unhcr-population-data-for-world.json
