#########################
# Project Configuration #
#########################

# Project name and version needed to run tests

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "hdx-scraper-refugees-returnees"
requires-python = ">=3.13"
dependencies = [
  "hdx-python-api",
  "hdx-python-utilities",
  "pandas",
]

dynamic = ["version"]

[project.optional-dependencies]
test = [
  "pytest",
  "pytest-cov"
]
dev = ["pre-commit"]

[project.scripts]
run = "hdx.scraper.refugees_returnees.__main__:main"
